Updated compliance wording
this is the current wording on live

--- a/pages/copyright-compliance.html
+++ b/pages/copyright-compliance.html
@@ -321,6 +321,8 @@ pre {
 
 <p>Staff must also be aware of the conditions of the Academic Integrity Policy.</p>
 
+<p>Your continued use of Learning Space constitutes acceptance of this declaration, so please check back to read the most recent version.</p>
+
 <h3>More guidance and information</h3>
 
 <p>GOV.UK Intellectual Property Office <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/375951/Education_and_Teaching.pdf">Exceptions to copyright: Education and Teaching</a></p>
